destination section added

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
 }
 
 h1,
+h3,
 p {
     margin: 0;
 }
@@ -30,6 +31,7 @@ img {
     color: #131318;
     font-size: 40px;
     font-weight: 800;
+
 }
 
 section {
@@ -137,6 +139,7 @@ nav ul li:first-child {
 }
 
 .hero-content p {
+    color: white;
     font-size: 16px;
     margin-bottom: 40px;
 }
@@ -285,6 +288,88 @@ p {
     margin-block: 20px;
 }
 
+/* destination section  */
+.destination-sec div:first-child {
+    text-align: center;
+
+}
+
+.destination-sec div:first-child p {
+    max-width: 650px;
+    margin-inline: auto;
+    margin-top: 10px;
+}
+
+.grid-container-outer {
+
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    margin-bottom: 24px;
+}
+
+.grid-container-outer div,
+.grid-container-inner div {
+    position: relative;
+}
+
+.grid-container-outer div h4,
+.grid-container-inner div h4 {
+    position: absolute;
+    top: calc(50% - 24px);
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #FFF;
+    font-size: 28px;
+    font-weight: 800;
+
+}
+
+.grid-container-inner {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto auto;
+    gap: 20px;
+
+}
+
+.grid-container-inner img {
+    width: 100%;
+    height: 300px;
+}
+
+
+.item3 {
+    grid-column: 1 / 3;
+}
+
+.item4 {
+    grid-column: 3 / 6;
+}
+
+.item5 {
+    grid-column: 6 / 7;
+}
+
+.item6 {
+    grid-column: 1 / 4;
+
+
+}
+
+.item6 img {
+    width: 500px;
+}
+
+.item7 {
+    grid-column: 4 / 7;
+}
+
+.item7 img {
+    width: auto;
+}
+
+
 /* media query  */
 
 @media only screen and (min-width:992px) {
@@ -417,5 +502,28 @@ p {
         margin-block: 15px;
     }
 
+    .grid-container-outer,
+    .grid-container-inner {
+        display: block;
 
+        margin-bottom: 0;
+    }
+
+    .grid-container-outer img,
+    .grid-container-inner img {
+        height: 176px;
+    }
+
+    .grid-container div {
+        margin-bottom: 10px;
+    }
+
+    .item6 img {
+        width: 100%;
+    }
+
+
+    .item7 img {
+        width: 100%;
+    }
 }
