--- a/style.css
+++ b/style.css
@@ -432,6 +432,121 @@ p {
     grid-column: 2 / 6;
 }
 
+/* newsletter section  */
+.newsletter-sec {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    gap: 24px;
+}
+
+
+.newsletter-sec div:first-child {
+    border-radius: 16px;
+    border: 1px solid #FF5400;
+    padding: 40px;
+    padding-right: 60px;
+}
+
+.newsletter-sec div h3 {
+    color: #131318;
+    font-size: 24px;
+    font-weight: 800;
+
+}
+
+.newsletter-sec div p {
+    color: #5A5A5D;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-block: 24px;
+
+}
+
+.newsletter-sec .right-side {
+    position: relative;
+}
+
+.newsletter-sec div input {
+    display: inline-block;
+    width: 100%;
+    padding-inline: 16px;
+    padding-block: 12px;
+    color: rgba(19, 19, 24, 0.30);
+    font-size: 16px;
+    font-weight: 400;
+    margin-block: 16px;
+
+    border: none;
+    outline: none;
+    border-radius: 8px;
+    background: rgba(19, 19, 24, 0.05);
+}
+
+.newsletter-sec div button {
+    display: inline-block;
+    width: 100%;
+    border-radius: 8px;
+    background: #FF5400;
+    border: none;
+    outline: none;
+    color: #FFF;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 800;
+    padding-block: 14px;
+
+}
+
+.newsletter-sec .styles {
+
+    transform: rotate(-19.628deg);
+    flex-shrink: 0;
+    border-radius: 16px;
+    background: #FF5400;
+    padding-inline: 10px;
+    padding-block: 5px;
+    position: absolute;
+    bottom: 40px;
+    right: 20px;
+
+
+}
+
+
+.styles p {
+    color: #FFF !important;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 400;
+    margin: 0;
+}
+
+.styles h3 {
+    color: #FFF !important;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 800;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.top-sec-content .grid-container-outer {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 16px;
+}
+
+.top-sec-content .grid-container-outer img {
+    height: 300px;
+}
+
+.top-sec-content .grid-container-outer h4 {
+    top: 60%;
+
+}
+
 /* media query  */
 
 @media only screen and (min-width:992px) {
@@ -587,4 +702,44 @@ p {
     .item7 img {
         width: 100%;
     }
+
+    .choose-us-sec-content {
+
+        grid-template-columns: repeat(1, 1fr);
+
+    }
+
+    .choose1 {
+        grid-column: 1 / 2;
+    }
+
+
+    .choose2 {
+        grid-column: 1 / 2;
+
+    }
+
+    .choose3 {
+        grid-column: 1 / 2;
+    }
+
+    .choose1,
+    .choose2,
+    .choose3 {
+
+        padding: 16px;
+        border-radius: 8px;
+
+    }
+
+    .newsletter-sec {
+        flex-direction: column;
+    }
+
+    .top-sec-content .grid-container-outer {
+
+        grid-template-columns: repeat(1, 1fr);
+
+    }
+
 }
